--- a/pytorch_fundamentals_00/pytorch_fundamentals_00.ipynb
+++ b/pytorch_fundamentals_00/pytorch_fundamentals_00.ipynb
@@ -1726,6 +1726,379 @@
     "print(f\"Previous shape: {x_originial.shape}\")\n",
     "print(f\"new shape: {x_permuted.shape}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Indexing (selecting data from tensors)\n",
+    "\n",
+    "Indexing with PyTorch is similar to indexing with NumPy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 248,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[[1, 2, 3],\n",
+       "          [4, 5, 6],\n",
+       "          [7, 8, 9]]]),\n",
+       " torch.Size([1, 3, 3]))"
+      ]
+     },
+     "execution_count": 248,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a tensor\n",
+    "x = torch.arange(1, 10).reshape(1, 3, 3)\n",
+    "x, x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1, 2, 3],\n",
+       "        [4, 5, 6],\n",
+       "        [7, 8, 9]])"
+      ]
+     },
+     "execution_count": 249,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Let;s index on our tensor\n",
+    "x[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 251,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([1, 2, 3]), tensor([1, 2, 3]))"
+      ]
+     },
+     "execution_count": 251,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# lets index on middle bracket\n",
+    "x[0][0], x[0, 0] # both are the same thing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(1)"
+      ]
+     },
+     "execution_count": 255,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# lets index on the most inner bracket\n",
+    "x[0][0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 256,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1, 2, 3]])"
+      ]
+     },
+     "execution_count": 256,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# You can also use \":\" to select \"all\" of a target dimension\n",
+    "x[:, 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 257,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[2, 5, 8]])"
+      ]
+     },
+     "execution_count": 257,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get all values of 0th and 1st dimension, but only index 1 of 2nd dimension\n",
+    "x[:, :, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 258,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([5])"
+      ]
+     },
+     "execution_count": 258,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get all values of the 0 dimension but only the 1 index value of 1st and 2nd dimension\n",
+    "x[:, 1, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 259,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1, 2, 3])"
+      ]
+     },
+     "execution_count": 259,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Get index 0 of 0th and 1 dimension and all values of 2nd dimension\n",
+    "x[0,0,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 261,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(9)"
+      ]
+     },
+     "execution_count": 261,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# index on x to return 9\n",
+    "x[0, 2, 2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([3, 6, 9])"
+      ]
+     },
+     "execution_count": 262,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# index on x to return 3, 6, 9\n",
+    "x[0, :, 2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PyTorch tensors and NumPy\n",
+    "\n",
+    "NumPy is a popular scientific Python numerical computing library. \n",
+    "And because of this, PyTorch has functionality to interact with it.\n",
+    "\n",
+    "* Data in NumPy, want in PyTorch tensor -> `torch.from_numpy(ndarray)`\n",
+    "* PyTorch tensor -> NumPy -> `torch.Tensor.numpy()`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 264,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([1., 2., 3., 4., 5., 6., 7.]),\n",
+       " tensor([1., 2., 3., 4., 5., 6., 7.], dtype=torch.float64))"
+      ]
+     },
+     "execution_count": 264,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# NumPy array to tensor\n",
+    "\n",
+    "array = np.arange(1.0, 8.0)\n",
+    "tensor = torch.from_numpy(array)\n",
+    "array, tensor # array use float64, so tensor will use float64 instead of float32"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 265,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('float64')"
+      ]
+     },
+     "execution_count": 265,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 266,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.float32"
+      ]
+     },
+     "execution_count": 266,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.arange(1.0, 8.0).dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 267,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([2., 3., 4., 5., 6., 7., 8.]),\n",
+       " tensor([1., 2., 3., 4., 5., 6., 7.], dtype=torch.float64))"
+      ]
+     },
+     "execution_count": 267,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Change value of array, what will this do to `tensor`?\n",
+    "array = array + 1\n",
+    "array, tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 268,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([1., 1., 1., 1., 1., 1., 1.]),\n",
+       " array([1., 1., 1., 1., 1., 1., 1.], dtype=float32))"
+      ]
+     },
+     "execution_count": 268,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# tensor to numpy\n",
+    "tensor = torch.ones(7)\n",
+    "numpy_tensor = tensor.numpy()\n",
+    "tensor, numpy_tensor # numpy_tensor reflects tensor default datatype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 269,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([2., 2., 2., 2., 2., 2., 2.]),\n",
+       " array([1., 1., 1., 1., 1., 1., 1.], dtype=float32))"
+      ]
+     },
+     "execution_count": 269,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# change the tensor, what happens to `numpy_tensor`\n",
+    "tensor = tensor + 1\n",
+    "tensor, numpy_tensor"
+   ]
   }
  ],
  "metadata": {
