--- a/pytorch_fundamentals_00/00_pytorch_fundamentals_exercises.ipynb
+++ b/pytorch_fundamentals_00/00_pytorch_fundamentals_exercises.ipynb
@@ -1,24 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "00_pytorch_fundamentals_exercises.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "AzDBM_v4iMe7"
+      },
       "source": [
         "# 00. PyTorch Fundamentals Exercises\n",
         "\n",
@@ -28,69 +14,108 @@
         "  * The documentation on [`torch.Tensor`](https://pytorch.org/docs/stable/tensors.html#torch-tensor).\n",
         "  * The documentation on [`torch.cuda`](https://pytorch.org/docs/master/notes/cuda.html#cuda-semantics).\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "AzDBM_v4iMe7"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# No code solution (reading)"
-      ],
+      "execution_count": 1,
       "metadata": {
         "id": "bGD0oD8Kizak"
       },
-      "execution_count": 1,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# No code solution (reading)"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### 2. Create a random tensor with shape `(7, 7)`.\n"
-      ],
       "metadata": {
         "id": "__iXqqz-ioUJ"
-      }
+      },
+      "source": [
+        "### 2. Create a random tensor with shape `(7, 7)`.\n"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Import torch\n",
-        "\n",
-        "\n",
-        "# Create random tensor\n"
-      ],
+      "execution_count": 4,
       "metadata": {
         "id": "6pUq9Dc8i2L7"
       },
-      "execution_count": 2,
-      "outputs": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "tensor([[0.8478, 0.5213, 0.9847, 0.5951, 0.1528, 0.5332, 0.5506],\n",
+              "        [0.6067, 0.0386, 0.0028, 0.9094, 0.2753, 0.5139, 0.0066],\n",
+              "        [0.8180, 0.4877, 0.8728, 0.8732, 0.9371, 0.3684, 0.9156],\n",
+              "        [0.7017, 0.1611, 0.7582, 0.2674, 0.9630, 0.5520, 0.7680],\n",
+              "        [0.5195, 0.1979, 0.6881, 0.9257, 0.6679, 0.5208, 0.1939],\n",
+              "        [0.0276, 0.2966, 0.4029, 0.7209, 0.3076, 0.7808, 0.5271],\n",
+              "        [0.6122, 0.4641, 0.4370, 0.4777, 0.6272, 0.5424, 0.3077]])"
+            ]
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# Import torch\n",
+        "import torch\n",
+        "\n",
+        "# Create random tensor\n",
+        "random_tensor = torch.rand(7, 7)\n",
+        "random_tensor"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### 3. Perform a matrix multiplication on the tensor from 2 with another random tensor with shape `(1, 7)` (hint: you may have to transpose the second tensor)."
-      ],
       "metadata": {
         "id": "9-XxvRLfiqkR"
-      }
+      },
+      "source": [
+        "### 3. Perform a matrix multiplication on the tensor from 2 with another random tensor with shape `(1, 7)` (hint: you may have to transpose the second tensor)."
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Create another random tensor\n",
-        "\n",
-        "# Perform matrix multiplication \n"
-      ],
+      "execution_count": 5,
       "metadata": {
         "id": "NcLqR0Sbi_vT"
       },
-      "execution_count": 3,
-      "outputs": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "tensor([[1.8927],\n",
+              "        [0.8405],\n",
+              "        [1.9936],\n",
+              "        [1.5603],\n",
+              "        [1.4011],\n",
+              "        [0.9537],\n",
+              "        [1.3354]])"
+            ]
+          },
+          "execution_count": 5,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# Create another random tensor\n",
+        "random_tensor_2 = torch.rand(1, 7)\n",
+        "\n",
+        "# Perform matrix multiplication \n",
+        "result = torch.matmul(random_tensor, random_tensor_2.T)\n",
+        "result"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "eiutdKUFiryU"
+      },
       "source": [
         "### 4. Set the random seed to `0` and do 2 & 3 over again.\n",
         "\n",
@@ -104,51 +129,72 @@
         "         [2.5290],\n",
         "         [1.7989]]), torch.Size([7, 1]))\n",
         "```"
-      ],
-      "metadata": {
-        "id": "eiutdKUFiryU"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Set manual seed\n",
-        "\n",
-        "\n",
-        "# Create two random tensors\n",
-        "\n",
-        "\n",
-        "# Matrix multiply tensors\n"
-      ],
+      "execution_count": 7,
       "metadata": {
         "id": "D-lOWI_1jRMm"
       },
-      "execution_count": 4,
-      "outputs": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(tensor([[1.8542],\n",
+              "         [1.9611],\n",
+              "         [2.2884],\n",
+              "         [3.0481],\n",
+              "         [1.7067],\n",
+              "         [2.5290],\n",
+              "         [1.7989]]),\n",
+              " torch.Size([7, 1]))"
+            ]
+          },
+          "execution_count": 7,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# Set manual seed\n",
+        "torch.manual_seed(0)\n",
+        "\n",
+        "# Create two random tensors\n",
+        "random_tensor_A = torch.rand(7, 7)\n",
+        "random_tensor_B = torch.rand(1, 7)\n",
+        "\n",
+        "# Matrix multiply tensors\n",
+        "result = torch.matmul(random_tensor_A, random_tensor_B.T)\n",
+        "result, result.shape"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "ezY6ks9Cis37"
+      },
       "source": [
         "### 5. Speaking of random seeds, we saw how to set it with `torch.manual_seed()` but is there a GPU equivalent? (hint: you'll need to look into the documentation for `torch.cuda` for this one)\n",
         "  * If there is, set the GPU random seed to `1234`."
-      ],
-      "metadata": {
-        "id": "ezY6ks9Cis37"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Set random seed on the GPU\n"
-      ],
+      "execution_count": 5,
       "metadata": {
         "id": "_LKWcfSTjp00"
       },
-      "execution_count": 5,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Set random seed on the GPU\n"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Ir9qSaj6it4n"
+      },
       "source": [
         "\n",
         "### 6. Create two random tensors of shape `(2, 3)` and send them both to the GPU (you'll need access to a GPU for this). Set `torch.manual_seed(1234)` when creating the tensors (this doesn't have to be the GPU random seed). The output should be something like:\n",
@@ -160,13 +206,15 @@
         " tensor([[0.0518, 0.4681, 0.6738],\n",
         "         [0.3315, 0.7837, 0.5631]], device='cuda:0'))\n",
         "```"
-      ],
-      "metadata": {
-        "id": "Ir9qSaj6it4n"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "id": "azXExiFZj5nm"
+      },
+      "outputs": [],
       "source": [
         "# Set random seed\n",
         "\n",
@@ -174,15 +222,13 @@
         "# Check for access to GPU\n",
         "\n",
         "# Create two random tensors on GPU\n"
-      ],
-      "metadata": {
-        "id": "azXExiFZj5nm"
-      },
-      "execution_count": 6,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "5TlAxeiSiu1y"
+      },
       "source": [
         "\n",
         "### 7. Perform a matrix multiplication on the tensors you created in 6 (again, you may have to adjust the shapes of one of the tensors).\n",
@@ -192,69 +238,69 @@
         "(tensor([[0.3647, 0.4709],\n",
         "         [0.5184, 0.5617]], device='cuda:0'), torch.Size([2, 2]))\n",
         "```"
-      ],
-      "metadata": {
-        "id": "5TlAxeiSiu1y"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Perform matmul on tensor_A and tensor_B\n"
-      ],
+      "execution_count": 7,
       "metadata": {
         "id": "fAeG7ox0lHEO"
       },
-      "execution_count": 7,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Perform matmul on tensor_A and tensor_B\n"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### 8. Find the maximum and minimum values of the output of 7."
-      ],
       "metadata": {
         "id": "G7qfa5CSivwg"
-      }
+      },
+      "source": [
+        "### 8. Find the maximum and minimum values of the output of 7."
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {
+        "id": "Fu8_3mZpllOd"
+      },
+      "outputs": [],
       "source": [
         "# Find max\n",
         "\n",
         "# Find min\n"
-      ],
-      "metadata": {
-        "id": "Fu8_3mZpllOd"
-      },
-      "execution_count": 8,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### 9. Find the maximum and minimum index values of the output of 7."
-      ],
       "metadata": {
         "id": "wrTj5FgNiw47"
-      }
+      },
+      "source": [
+        "### 9. Find the maximum and minimum index values of the output of 7."
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {
+        "id": "CCEKt4K2lsfQ"
+      },
+      "outputs": [],
       "source": [
         "# Find arg max\n",
         "\n",
         "\n",
         "# Find arg min\n"
-      ],
-      "metadata": {
-        "id": "CCEKt4K2lsfQ"
-      },
-      "execution_count": 9,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "hmeybz4uixy7"
+      },
       "source": [
         "\n",
         "### 10. Make a random tensor with shape `(1, 1, 1, 10)` and then create a new tensor with all the `1` dimensions removed to be left with a tensor of shape `(10)`. Set the seed to `7` when you create it and print out the first tensor and it's shape as well as the second tensor and it's shape.\n",
@@ -267,13 +313,15 @@
         "tensor([0.5349, 0.1988, 0.6592, 0.6569, 0.2328, 0.4251, 0.2071, 0.6297, 0.3653,\n",
         "        0.8513]) torch.Size([10])\n",
         "```"
-      ],
-      "metadata": {
-        "id": "hmeybz4uixy7"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {
+        "id": "TQ9zbRzVl1jV"
+      },
+      "outputs": [],
       "source": [
         "# Set seed\n",
         "\n",
@@ -285,12 +333,33 @@
         "\n",
         "\n",
         "# Print out tensors and their shapes\n"
-      ],
-      "metadata": {
-        "id": "TQ9zbRzVl1jV"
-      },
-      "execution_count": 10,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "collapsed_sections": [],
+      "name": "00_pytorch_fundamentals_exercises.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
