done with exercise
will do chapter 1 next

--- a/pytorch_fundamentals_00/pytorch_fundamentals_00_exercises.ipynb
+++ b/pytorch_fundamentals_00/pytorch_fundamentals_00_exercises.ipynb
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 1,
       "metadata": {
         "id": "6pUq9Dc8i2L7"
       },
@@ -46,16 +46,23 @@
         {
           "data": {
             "text/plain": [
-              "tensor([[0.8478, 0.5213, 0.9847, 0.5951, 0.1528, 0.5332, 0.5506],\n",
-              "        [0.6067, 0.0386, 0.0028, 0.9094, 0.2753, 0.5139, 0.0066],\n",
-              "        [0.8180, 0.4877, 0.8728, 0.8732, 0.9371, 0.3684, 0.9156],\n",
-              "        [0.7017, 0.1611, 0.7582, 0.2674, 0.9630, 0.5520, 0.7680],\n",
-              "        [0.5195, 0.1979, 0.6881, 0.9257, 0.6679, 0.5208, 0.1939],\n",
-              "        [0.0276, 0.2966, 0.4029, 0.7209, 0.3076, 0.7808, 0.5271],\n",
-              "        [0.6122, 0.4641, 0.4370, 0.4777, 0.6272, 0.5424, 0.3077]])"
+              "tensor([[2.0864e-01, 3.5300e-03, 6.8157e-01, 2.2699e-01, 9.2710e-01, 6.8887e-01,\n",
+              "         7.6483e-01],\n",
+              "        [4.5686e-01, 5.0601e-01, 1.0604e-01, 4.1996e-01, 1.4815e-01, 1.9691e-01,\n",
+              "         2.8025e-01],\n",
+              "        [8.9504e-01, 3.2642e-01, 9.4595e-01, 5.2702e-01, 3.4153e-01, 8.0188e-01,\n",
+              "         9.2488e-01],\n",
+              "        [4.4025e-03, 6.4246e-01, 1.2727e-01, 7.7131e-01, 5.5779e-02, 6.8200e-04,\n",
+              "         1.6900e-01],\n",
+              "        [9.1096e-01, 1.9379e-01, 5.8108e-01, 3.2240e-01, 6.5842e-01, 7.7851e-01,\n",
+              "         1.9995e-01],\n",
+              "        [2.3027e-01, 7.1493e-01, 4.2466e-01, 9.1932e-01, 5.9631e-01, 8.6152e-01,\n",
+              "         3.3421e-01],\n",
+              "        [5.2958e-01, 9.0835e-01, 7.3898e-01, 3.2144e-01, 6.7270e-01, 5.2563e-01,\n",
+              "         9.9191e-01]])"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 1,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -80,7 +87,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 2,
       "metadata": {
         "id": "NcLqR0Sbi_vT"
       },
@@ -88,16 +95,16 @@
         {
           "data": {
             "text/plain": [
-              "tensor([[1.8927],\n",
-              "        [0.8405],\n",
-              "        [1.9936],\n",
-              "        [1.5603],\n",
-              "        [1.4011],\n",
-              "        [0.9537],\n",
-              "        [1.3354]])"
+              "tensor([[2.0028],\n",
+              "        [1.2162],\n",
+              "        [2.9175],\n",
+              "        [1.0400],\n",
+              "        [2.1270],\n",
+              "        [2.2596],\n",
+              "        [2.8310]])"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -133,7 +140,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 3,
       "metadata": {
         "id": "D-lOWI_1jRMm"
       },
@@ -151,7 +158,7 @@
               " torch.Size([7, 1]))"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -181,13 +188,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {
         "id": "_LKWcfSTjp00"
       },
       "outputs": [],
       "source": [
-        "# Set random seed on the GPU\n"
+        "# Set random seed on the GPU\n",
+        "torch.cuda.manual_seed(1234)"
       ]
     },
     {
@@ -210,18 +218,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 8,
       "metadata": {
         "id": "azXExiFZj5nm"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "tensor([[0.0290, 0.4019, 0.2598],\n",
+            "        [0.3666, 0.0583, 0.7006]]) tensor([[0.0518, 0.4681, 0.6738],\n",
+            "        [0.3315, 0.7837, 0.5631]])\n"
+          ]
+        }
+      ],
       "source": [
         "# Set random seed\n",
-        "\n",
+        "torch.cuda.manual_seed(1234)\n",
+        "torch.manual_seed(1234)\n",
         "\n",
         "# Check for access to GPU\n",
+        "# torch.cuda.is_available()\n",
         "\n",
-        "# Create two random tensors on GPU\n"
+        "# Create two random tensors on GPU\n",
+        "random_a = torch.rand(2, 3)\n",
+        "random_b = torch.rand(2, 3)\n",
+        "\n",
+        "print(random_a, random_b)"
       ]
     },
     {
@@ -242,13 +266,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 9,
       "metadata": {
         "id": "fAeG7ox0lHEO"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "tensor([[0.3647, 0.4709],\n",
+              "        [0.5184, 0.5617]])"
+            ]
+          },
+          "execution_count": 9,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "# Perform matmul on tensor_A and tensor_B\n"
+        "# Perform matmul on tensor_A and tensor_B\n",
+        "multiplied_mat = torch.matmul(random_a, random_b.T)\n",
+        "multiplied_mat"
       ]
     },
     {
@@ -262,15 +300,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 10,
       "metadata": {
         "id": "Fu8_3mZpllOd"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(tensor(0.5617), tensor(0.3647))"
+            ]
+          },
+          "execution_count": 10,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Find max\n",
+        "max_val = multiplied_mat.max()\n",
+        "# Find min\n",
+        "min_val = multiplied_mat.min()\n",
         "\n",
-        "# Find min\n"
+        "max_val, min_val"
       ]
     },
     {
@@ -284,16 +336,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 11,
       "metadata": {
         "id": "CCEKt4K2lsfQ"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(tensor(3), tensor(0))"
+            ]
+          },
+          "execution_count": 11,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Find arg max\n",
+        "max_index = multiplied_mat.argmax()\n",
         "\n",
+        "# Find arg min\n",
+        "min_index = multiplied_mat.argmin()\n",
         "\n",
-        "# Find arg min\n"
+        "max_index, min_index"
       ]
     },
     {
@@ -317,22 +383,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 12,
       "metadata": {
         "id": "TQ9zbRzVl1jV"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(tensor([[[[0.5349, 0.1988, 0.6592, 0.6569, 0.2328, 0.4251, 0.2071, 0.6297,\n",
+              "            0.3653, 0.8513]]]]),\n",
+              " tensor([0.5349, 0.1988, 0.6592, 0.6569, 0.2328, 0.4251, 0.2071, 0.6297, 0.3653,\n",
+              "         0.8513]),\n",
+              " torch.Size([10]))"
+            ]
+          },
+          "execution_count": 12,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Set seed\n",
-        "\n",
+        "torch.manual_seed(7)\n",
         "\n",
         "# Create random tensor\n",
-        "\n",
+        "random_tensor_q10 = torch.rand(1, 1, 1, 10)\n",
         "\n",
         "# Remove single dimensions\n",
+        "removed_single_dimensions = random_tensor_q10.squeeze()\n",
         "\n",
-        "\n",
-        "# Print out tensors and their shapes\n"
+        "# Print out tensors and their shapes\n",
+        "random_tensor_q10, removed_single_dimensions, removed_single_dimensions.shape"
       ]
     }
   ],
