--- a/pytorch_workflow_fundamentals_01/pytorch_workflow_fundamentals_01.ipynb
+++ b/pytorch_workflow_fundamentals_01/pytorch_workflow_fundamentals_01.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
        " 6: 'putting it all together'}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
        "'2.6.0'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
        " 50)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
        "(40, 40, 10, 10)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "         [0.8460]]))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
        " tensor([0.1288], requires_grad=True)]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +454,7 @@
        "OrderedDict([('weights', tensor([0.3367])), ('bias', tensor([0.1288]))])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
        "        [0.4588]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
        "        [0.9860]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -580,6 +580,113 @@
     "for pytorch, we need\n",
     "- training loop\n",
     "- testing loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Parameter containing:\n",
+       " tensor([0.3367], requires_grad=True),\n",
+       " Parameter containing:\n",
+       " tensor([0.1288], requires_grad=True)]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(model_0.parameters())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OrderedDict([('weights', tensor([0.3367])), ('bias', tensor([0.1288]))])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check model's parameters\n",
+    "model_0.state_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# setup a loss function\n",
+    "loss_fn = nn.L1Loss()\n",
+    "\n",
+    "# setup an optimizer\n",
+    "optimizer = torch.optim.SGD(params = model_0.parameters(),\n",
+    "                            lr = 0.01) #lr possibly the most important hyperparameter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bulding a training loop (and a testing loop) in PyTorch\n",
+    "\n",
+    "what we need for training loop: \n",
+    "- loop through the data\n",
+    "- forward pass (this involve data moving through our mode's `forward()` function) to make predictions on data- also called forward propagation\n",
+    "- calculate the loss (compare forward pass predictions to ground truth labels)\n",
+    "- optimizer zero grad\n",
+    "- loss backward - move backwards through the network to calculate the gradients of each the parameters of our model with respect to the loss (backpropagation)\n",
+    "- optimizer step - use this to adjust model's parameter to try to improve (gradient descent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# an epoch is one loop through the data (this is hyperparameter because we set it ourselves)\n",
+    "epochs = 1\n",
+    "\n",
+    "### Training\n",
+    "# loop through the data\n",
+    "for epoch in range(epochs):\n",
+    "    # set the model to training mode\n",
+    "    model_0.train() # sets all parameters that require gradient to require gradient\n",
+    "\n",
+    "    # 1. forward pass\n",
+    "    y_pred = model_0(X_train)\n",
+    "\n",
+    "    # 2. calculate the loss\n",
+    "    loss = loss_fn(y_pred, y_train)\n",
+    "\n",
+    "    # 3. optimizer zero grad\n",
+    "    optimizer.zero_grad()\n",
+    "\n",
+    "    # 4. backpropagation on the loss with respect to the parameters of the model\n",
+    "    loss.backward()\n",
+    "\n",
+    "    # 5. step the optimizer\n",
+    "    optimizer.step() # by default how the optimizer changes will accumualte through the loop\n",
+    "\n",
+    "    ### Testing\n",
+    "    model_0.eval() # turns off gradient tracking"
    ]
   }
  ],
